@@ -29,12 +29,62 @@ static const gchar *config_path = CONFIG_FILE;
 static const gchar *pid_path = "/var/run/lightdm.pid";
 static GMainLoop *loop = NULL;
 static gboolean test_mode = FALSE;
+static GTimer *log_timer;
+static FILE *log_file;
 static gboolean debug = FALSE;
 static int signal_pipe[2];
 
 static DisplayManager *display_manager = NULL;
 
 #define LDM_BUS_NAME "org.lightdm.LightDisplayManager"
+
+static gboolean
+handle_signal (GIOChannel *source, GIOCondition condition, gpointer data)
+{
+    int signo;
+    pid_t pid;
+
+    if (read (signal_pipe[0], &signo, sizeof (int)) < 0 || 
+        read (signal_pipe[0], &pid, sizeof (pid_t)) < 0)
+        return TRUE;
+
+    if (signo == SIGUSR1)
+        xserver_handle_signal (pid);
+    else
+    {
+        g_debug ("Caught %s signal, exiting", g_strsignal (signo));
+        g_object_unref (display_manager);
+        g_main_loop_quit (loop);
+    }
+
+    return TRUE;
+}
+
+static void
+signal_cb (int signum, siginfo_t *info, void *data)
+{
+    if (write (signal_pipe[1], &info->si_signo, sizeof (int)) < 0 ||
+        write (signal_pipe[1], &info->si_pid, sizeof (pid_t)) < 0)
+        g_warning ("Failed to write to signal pipe");
+}
+
+static void
+handle_signals (void)
+{
+    struct sigaction action;
+
+    /* Catch signals and feed them to the main loop via a pipe */
+    if (pipe (signal_pipe) != 0)
+        g_critical ("Failed to create signal pipe");
+    g_io_add_watch (g_io_channel_unix_new (signal_pipe[0]), G_IO_IN, handle_signal, NULL);
+    action.sa_sigaction = signal_cb;
+    sigemptyset (&action.sa_mask);
+    action.sa_flags = SA_SIGINFO;
+    sigaction (SIGTERM, &action, NULL);
+    sigaction (SIGINT, &action, NULL);
+    sigaction (SIGHUP, &action, NULL);
+    sigaction (SIGUSR1, &action, NULL);
+}
 
 static void
 version (void)
@@ -119,36 +169,6 @@ get_options (int argc, char **argv)
     }
 }
 
-static gboolean
-handle_signal (GIOChannel *source, GIOCondition condition, gpointer data)
-{
-    int signo;
-    pid_t pid;
-
-    if (read (signal_pipe[0], &signo, sizeof (int)) < 0 || 
-        read (signal_pipe[0], &pid, sizeof (pid_t)) < 0)
-        return TRUE;
-
-    if (signo == SIGUSR1)
-        xserver_handle_signal (pid);
-    else
-    {
-        g_debug ("Caught %s signal, exiting", g_strsignal (signo));
-        g_object_unref (display_manager);
-        g_main_loop_quit (loop);
-    }
-
-    return TRUE;
-}
-
-static void
-signal_cb (int signum, siginfo_t *info, void *data)
-{
-    if (write (signal_pipe[1], &info->si_signo, sizeof (int)) < 0 ||
-        write (signal_pipe[1], &info->si_pid, sizeof (pid_t)) < 0)
-        g_warning ("Failed to write to signal pipe");
-}
-
 static DBusGConnection *
 start_dbus (void)
 {
@@ -193,6 +213,93 @@ start_dbus (void)
 }
 
 static void
+load_config (void)
+{
+    GError *error = NULL;
+
+    config_file = g_key_file_new ();
+    if (!g_key_file_load_from_file (config_file, config_path, G_KEY_FILE_NONE, &error))
+        g_warning ("Failed to load configuration from %s: %s", config_path, error->message); // FIXME: Don't make warning on no file, just info
+    g_clear_error (&error);
+
+    if (test_mode)
+    {
+        gchar *path;
+        g_key_file_set_boolean (config_file, "LightDM", "test-mode", TRUE);
+        path = g_build_filename (g_get_user_cache_dir (), "lightdm", "authority", NULL);
+        g_key_file_set_string (config_file, "LightDM", "authorization-directory", path);
+        g_free (path);
+        path = g_build_filename (g_get_user_cache_dir (), "lightdm", NULL);
+        g_key_file_set_string (config_file, "LightDM", "log-directory", path);
+        g_free (path);
+    }
+}
+
+static void
+log_cb (const gchar *log_domain, GLogLevelFlags log_level,
+        const gchar *message, gpointer data)
+{
+    /* Log everything to a file */
+    if (log_file) {
+        const gchar *prefix;
+
+        switch (log_level & G_LOG_LEVEL_MASK) {
+        case G_LOG_LEVEL_ERROR:
+            prefix = "ERROR:";
+            break;
+        case G_LOG_LEVEL_CRITICAL:
+            prefix = "CRITICAL:";
+            break;
+        case G_LOG_LEVEL_WARNING:
+            prefix = "WARNING:";
+            break;
+        case G_LOG_LEVEL_MESSAGE:
+            prefix = "MESSAGE:";
+            break;
+        case G_LOG_LEVEL_INFO:
+            prefix = "INFO:";
+            break;
+        case G_LOG_LEVEL_DEBUG:
+            prefix = "DEBUG:";
+            break;
+        default:
+            prefix = "LOG:";
+            break;
+        }
+
+        fprintf (log_file, "[%+.2fs] %s %s\n", g_timer_elapsed (log_timer, NULL), prefix, message);
+    }
+
+    /* Only show debug if requested */
+    if (log_level & G_LOG_LEVEL_DEBUG) {
+        if (debug)
+            g_log_default_handler (log_domain, log_level, message, data);
+    }
+    else
+        g_log_default_handler (log_domain, log_level, message, data);    
+}
+
+static void
+log_init (void)
+{
+    gchar *log_dir, *path;
+
+    log_timer = g_timer_new ();
+
+    /* Log to a file */
+    log_dir = g_key_file_get_string (config_file, "LightDM", "log-directory", NULL);
+    if (!log_dir)
+        log_dir = g_strdup (LOG_DIR);
+    g_mkdir_with_parents (log_dir, 0700);
+    path = g_build_filename (log_dir, "lightdm.log", NULL);
+    g_free (log_dir);
+
+    log_file = fopen (path, "w");
+    g_free (path);
+    g_log_set_default_handler (log_cb, NULL);
+}
+
+static void
 display_added_cb (DisplayManager *manager, Display *display)
 {
     gchar *name;
@@ -206,21 +313,10 @@ main(int argc, char **argv)
 {
     FILE *pid_file;
     UserManager *user_manager;
-    struct sigaction action;
-    GError *error = NULL;
 
-    /* Catch signals and feed them to the main loop via a pipe */
-    if (pipe (signal_pipe) != 0)
-        g_critical ("Failed to create signal pipe");
-    g_io_add_watch (g_io_channel_unix_new (signal_pipe[0]), G_IO_IN, handle_signal, NULL);
-    action.sa_sigaction = signal_cb;
-    sigemptyset (&action.sa_mask);
-    action.sa_flags = SA_SIGINFO;
-    sigaction (SIGTERM, &action, NULL);
-    sigaction (SIGINT, &action, NULL);
-    sigaction (SIGHUP, &action, NULL);
-    sigaction (SIGUSR1, &action, NULL);
+    handle_signals ();
 
+    g_thread_init (NULL);
     g_type_init ();
 
     get_options (argc, argv);
@@ -233,6 +329,7 @@ main(int argc, char **argv)
         fclose (pid_file);
     }
 
+    /* Check if root */
     if (!test_mode && getuid () != 0)
     {
         g_printerr ("Only root can run Light Display Manager\n");
@@ -243,21 +340,17 @@ main(int argc, char **argv)
     if (!bus)
         return 1;
 
-    g_debug ("Starting Light Display Manager %s, PID=%i", VERSION, getpid ());
-
     // Change working directory?
 
     loop = g_main_loop_new (NULL, FALSE);
 
-    config_file = g_key_file_new ();
-    if (g_key_file_load_from_file (config_file, config_path, G_KEY_FILE_NONE, &error))
-        g_debug ("Loaded configuration from %s", config_path);
-    else
-        g_warning ("Failed to load configuration from %s: %s", config_path, error->message); // FIXME: Don't make warning on no file, just info
-    g_clear_error (&error);
+    load_config ();
 
-    if (test_mode)
-       g_key_file_set_boolean (config_file, "LightDM", "test-mode", TRUE);
+    log_init ();
+
+    g_debug ("Starting Light Display Manager %s, PID=%i", VERSION, getpid ());
+
+    g_debug ("Loaded configuration from %s", config_path);
 
     user_manager = user_manager_new (config_file);
     dbus_g_connection_register_g_object (bus, "/org/lightdm/LightDisplayManager/Users", G_OBJECT (user_manager));
